--- a/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
+++ b/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
@@ -5,6 +5,7 @@
     android:id="@+id/idLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondoaplicacion"
     tools:context=".Desberdintasunakbilatu_4">
 
     <TextView
