--- a/app/src/main/res/layout/activity_informazioakuadroabete_19.xml
+++ b/app/src/main/res/layout/activity_informazioakuadroabete_19.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondoaplicacion"
     tools:context=".Informazioakuadroabete_19">
 
 
