--- a/app/src/main/res/layout/activity_paragrafoabetehitzekin_15.xml
+++ b/app/src/main/res/layout/activity_paragrafoabetehitzekin_15.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/fondoaplicacion"
     tools:context=".Paragrafoabetehitzekin_15">
     <!--android:background="@drawable/textoej15"-->
 
