--- a/app/src/main/res/layout/input_dialog.xml
+++ b/app/src/main/res/layout/input_dialog.xml
@@ -8,17 +8,17 @@
     android:padding="10dp">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Password"
-        android:id="@+id/textView" />
+        android:text="Pasahitza"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
         android:id="@+id/edittext"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Password Here.."
+        android:hint="Sartu pasahitza"
         android:inputType="textPassword"
         android:padding="10dp" />
 
