--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -7,6 +7,11 @@
     android:background="@color/colorPrimary"
     tools:context=".splashscreen">
 
+    <com.example.ik_2dm3.didaktikapp.IntroVideoView
+        android:id="@+id/introVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="wrap_content"
@@ -38,4 +43,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7"
         app:layout_constraintVertical_bias="0.0" />
+
+
+
+
 </android.support.constraint.ConstraintLayout>
