cambios quitar navs , poner fondos y poner tipo letra

--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -27,6 +27,7 @@
             android:layout_marginTop="180dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/rippleeffect"
+            android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/text_Ibilbidea"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
@@ -43,6 +44,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="50dp"
             android:background="@drawable/rippleeffect"
+            android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/text_Galeria"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
@@ -60,6 +62,7 @@
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rippleeffect"
+            android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/text_Ondareak"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
