--- a/app/src/main/res/layout/grid_item_card_list.xml
+++ b/app/src/main/res/layout/grid_item_card_list.xml
@@ -44,6 +44,7 @@
                 android:layout_centerVertical="true"
                 android:background="@color/blue"
                 android:ellipsize="end"
+                android:fontFamily="@font/josefin_slab_bold"
                 android:maxLines="1"
                 android:scrollHorizontally="true"
                 android:shadowColor="#000"
