--- a/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
+++ b/app/src/main/res/layout/activity_desberdintasuna_bilatu_4.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="401dp"
-        android:layout_height="60dp"
+        android:layout_height="85dp"
 
         android:layout_marginStart="96dp"
         android:layout_marginTop="31dp"
@@ -19,7 +19,11 @@
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
         android:adjustViewBounds="true"
+        android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/azalpena"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
