--- a/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
+++ b/app/src/main/res/layout/activity_esaldizuzenaaukeratu_6.xml
@@ -14,7 +14,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="96dp"
+        android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/galdera"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.024"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +32,11 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="305dp"
         android:layout_marginBottom="178dp"
+        android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/aukera"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="10dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
