--- a/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
+++ b/app/src/main/res/layout/activity_galderenerantzunaaukeratu_5.xml
@@ -27,11 +27,13 @@
         android:id="@+id/textView"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-
         android:layout_marginStart="6dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/kolorea"
+        android:textAlignment="center"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +45,6 @@
         android:id="@+id/spinner"
         android:layout_width="190dp"
         android:layout_height="44dp"
-
         android:layout_marginStart="6dp"
         android:layout_marginTop="19dp"
         android:layout_marginEnd="16dp"
