--- a/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
+++ b/app/src/main/res/layout/activity_erantzunzuzenaaukeratu_17.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="151dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Zein urtetan bihurtu zen hotel bat?"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_width="155dp"
         android:layout_height="41dp"
         android:layout_marginTop="12dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="2003"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +41,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="27dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="2017"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +54,7 @@
         android:layout_marginStart="151dp"
         android:layout_marginEnd="151dp"
         android:fontFamily="@font/josefin_slab_bold"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:text="Tomás Allendek zein urtetan zatitu zuen finka bi seme-alaben artean?"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -64,6 +68,7 @@
         android:layout_height="41dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="11dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="1700"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +80,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="27dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="1925"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,6 +93,7 @@
         android:layout_marginStart="151dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="151dp"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:layout_marginBottom="21dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Zer bi finka sortu ziren horren ondorioz?"
@@ -105,6 +112,7 @@
         android:layout_height="66dp"
         android:layout_marginStart="17dp"
         android:layout_marginTop="9dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Kaialde eta Villa Ariatza ﬁnkak "
         app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +124,7 @@
         android:layout_height="66dp"
         android:layout_marginTop="9dp"
         android:layout_marginEnd="27dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Villa Ariatza eta Eguzkilore"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,6 +137,7 @@
         android:layout_marginStart="151dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="151dp"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Ariatza eraikina dagoen finka norentzat izan zen? "
@@ -143,6 +153,7 @@
         android:layout_height="54dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="14dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Javi Hoyosentzat"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,6 +165,7 @@
         android:layout_height="54dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="27dp"
+        android:background="@drawable/rippleeffect"
         android:fontFamily="@font/josefin_slab_bold"
         android:text="Luis Allenderentzat"
         app:layout_constraintEnd_toEndOf="parent"
