--- a/app/src/main/res/layout/activity_menu_main.xml
+++ b/app/src/main/res/layout/activity_menu_main.xml
@@ -32,6 +32,7 @@
             android:text="@string/text_Ibilbidea"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +50,7 @@
             android:text="@string/text_Galeria"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +69,7 @@
             android:text="@string/text_Ondareak"
             android:textAlignment="center"
             android:textColor="@color/colorTexto"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
