--- a/app/src/main/res/layout/activity_debaterakogalderak_9.xml
+++ b/app/src/main/res/layout/activity_debaterakogalderak_9.xml
@@ -26,6 +26,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/debaterakog1"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/galdera2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +43,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/debaterakog2"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/galdera3"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,6 +59,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/debaterakog3"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/galdera4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +75,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/debaterakog4"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +90,7 @@
             android:fontFamily="@font/josefin_slab_bold"
             android:text="@string/komentatu"
             android:textAlignment="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
             android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/fotodebate"
             app:layout_constraintEnd_toEndOf="parent"
