--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/getxov2"
+    android:background="@drawable/getxo_comic"
     tools:context=".MainActivity">
 
     <Button
@@ -19,6 +19,7 @@
         android:fontFamily="@font/josefin_slab_bold"
         android:text="@string/btnHasi"
         android:textColor="@color/colorTexto"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
