--- a/app/src/main/res/layout/activity_paragrafoabetehitzekin_15.xml
+++ b/app/src/main/res/layout/activity_paragrafoabetehitzekin_15.xml
@@ -46,6 +46,7 @@
                 android:layout_weight="1"
                 android:text="Getxo"
                 android:textAlignment="center"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textSize="20sp" />
 
             <EditText
@@ -63,6 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="mendean eraiki zen,"
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -88,6 +90,7 @@
             <TextView
                 android:id="@+id/linea2"
                 android:layout_width="384dp"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="elizaren inguruan."
@@ -107,6 +110,7 @@
                 android:layout_width="332dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="Arrantzaleek, euren etxeak"
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -134,6 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="auzoko portu txikian eraiki zituzten."
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -150,6 +155,7 @@
                 android:layout_width="429dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="Hasiera batean, "
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -174,6 +180,7 @@
                 android:id="@+id/linea6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:layout_weight="1"
                 android:text="bihurtu zen udaleku Bilboko aristokrazia-"
                 android:textAlignment="center"
@@ -191,6 +198,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="ren eta goi-burgesiarentzat."
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -207,6 +215,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="XX. mendearen hasieran"
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -232,6 +241,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="jaio zen, luxuzko bizitokirik famatuena."
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -248,6 +258,7 @@
                 android:layout_width="474dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="Neguri izenaren jatorria"
                 android:textAlignment="center"
                 android:textSize="20sp" />
@@ -274,6 +285,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="eta"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textAlignment="center"
                 android:textSize="20sp" />
 
@@ -291,6 +303,7 @@
                 android:layout_width="343dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:text="hitzak lotuz sortu zen."
                 android:textAlignment="center"
                 android:textSize="20sp" />
